@@ -144,6 +144,10 @@ JD   53- [plot] SVG support
      58- new GP function ellminimaldisc
      59- [libpari] rfracrecip_to_ser_absolute
      60- new GP function znchardecompose
+PB   61- perm_sign
+PB   62- [libpari] FlxC_neg FlxC_sub FlxM_neg FlxM_sub FlxqC_Flxq_mul
+                   FlxqM_Flxq_mul zero_FlxC zero_FlxM
+PB   63- asymptotically fast linear algebra using CUP decomposition
 
   Changed
       1- rewrite bnfnarrow
